--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.LanguageApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    <style name="Base.Theme.LanguageApp" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorOnBackground">@color/dark_background</item>
+        <item name="colorPrimary">@color/light_text</item>
+        <item name="colorSecondary">@color/opacity_white_60</item>
+        <item name="colorSmallTitle">@color/opacity_white_60</item>
+        <item name="colorActivity">@color/opacity_white_60</item>
     </style>
 </resources>
