--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.LanguageApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    
+    <attr name="colorSmallTitle"/>
+    <attr name="colorActivity"/>
+    
+    <style name="Base.Theme.LanguageApp" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorOnBackground">@color/light_background</item>
+        <item name="colorPrimary">@color/dark_text</item>
+        <item name="colorSecondary">@color/opacity_dark_text</item>
+        <item name="colorSmallTitle">@color/dark_lighter</item>
+        <item name="colorActivity">@color/gray_dark</item>
+    </style>
+
+    <style name="Theme.LanguageApp" parent="Base.Theme.LanguageApp" />
+    <style name="LanguageAppSplashTheme">
+        <item name="android:windowSplashScreenBackground" tools:targetApi="s">@color/deep_blue</item>
     </style>
 </resources>
